--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ojos de arte</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Arte - Identidad - Narrativa. Conectando el arte latinoamericano con el mundo." />
+    <meta name="author" content="Ojos de Arte" />
 
-    <meta property="og:title" content="mind-canvas-showcase" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta property="og:title" content="Ojos de Arte" />
+    <meta property="og:description" content="Arte - Identidad - Narrativa. Conectando el arte latinoamericano con el mundo." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Ojos de Arte" />
+    <meta name="twitter:description" content="Arte - Identidad - Narrativa. Conectando el arte latinoamericano con el mundo." />
+    <meta name="twitter:image" content="/favicon.svg" />
   </head>
 
   <body>
