--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Ojos de Arte" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     
     <!-- Web App Manifest -->
     <link rel="manifest" href="/site.webmanifest" />
@@ -18,12 +18,12 @@
     <meta property="og:title" content="Ojos de Arte" />
     <meta property="og:description" content="Arte - Identidad - Narrativa. Conectando el arte latinoamericano con el mundo." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ojos de Arte" />
     <meta name="twitter:description" content="Arte - Identidad - Narrativa. Conectando el arte latinoamericano con el mundo." />
-    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
   <body>
